--- a/insight/templates/samples/widgets/sample_list.html
+++ b/insight/templates/samples/widgets/sample_list.html
@@ -9,7 +9,7 @@
     <p>No samples were found. You can also <a href="{{ url_for('samples.submit') }}">submit your own</a>.</p>
 {% else -%}
         {{ bootstrap.card_open() }}
-            {{ bootstrap.table_open(classes=['table-hover'], head_values=['Timestamp','Name','Filetype','Evil Rating','Status','']) }}
+            {{ bootstrap.table_open(classes=['table-hover'], head_values=['Timestamp','Name','Filetype','Evil Rating','Status',''], dataTable=False, flush=True) }}
                     {% for sample in samples %}
                       <tr>
                         <td data-title="Timestamp">{{ sample.metadata.timestamp }}</td>
