--- a/insight/templates/samples/widgets/sample_header.html
+++ b/insight/templates/samples/widgets/sample_header.html
@@ -1,4 +1,4 @@
-<div class="row mb-4">
+<div id="sampleHeader" class="row mb-4">
     <!-- Basic File Information -->
     <div class="col-lg-12 col-md-12">
         {{ bootstrap.card_open() }}
